--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -10,46 +10,42 @@ http {
     error_log  /var/log/nginx/vue-app-error.log;
     access_log /var/log/nginx/vue-app-access.log;
    
-    # gzip on;
-    # gzip_types text/css application/javascript application/json image/svg+xml;
-    # gzip_comp_level 9;
-    # etag on;
+    gzip on;
+    gzip_types text/css application/javascript application/json image/svg+xml;
+    gzip_comp_level 9;
+    etag on;
+    
     # Always serve index.html for any request
-   
     location / {
         root /usr/share/nginx/html;
+        add_header Cache-Control no-cache;
         try_files $uri $uri/ /index.html;
         # try_files $uri /index.html;
     }
   
-    #location /static/ {
-    #    add_header Cache-Control max-age=31536000;
-    #}
+    location /static/ {
+        add_header Cache-Control max-age=31536000;
+    }
     #location /index.html {
     #    add_header Cache-Control no-cache;
     #}
     location ~ \.js$  {
         ## THIS WORKS, whereas proxy_set_header does not
         types { } default_type "application/javascript; charset=utf-8";
- 
-        ## override header (more like send custom header using nginx) #
         add_header x-robots-tag "noindex, follow";
     }
+
     location ~ \.pdf$  {
        types { } default_type "application/pdf";
     }
+
     location ~ \.png$  {
        types { } default_type "image/png";
     }
+    
     location ~* ^/css(/.+\.(css))$  {
         types { } default_type "text/css";
- 
-        ## override header (more like send custom header using nginx) #
         add_header x-robots-tag "noindex, follow";
     }
-    #location /js/ {
-     #  proxy_set_header Content-Type "application/javascript";
-        ## override content-type ##
-      #  types { } default_type "application/javascript; charset=utf-8";
   }
 }
