--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -51,7 +51,14 @@ http {
         # However if no match occurs the first server section is applied.
         server_name adivo.ch;
         include common.conf;
-        
+        location / {
+            # When using the internal url of the web service:
+            # proxy_pass http://imonetprod_web_1:80; 
+
+            # Reference the upstream server configured above
+            proxy_pass http://imonetprod_web; 
+        }
+       
         # Pattern to access the api service
         # Example: http://dbadmin.rhb.innotix.local
         location /api/ {
@@ -70,14 +77,7 @@ http {
             # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             # proxy_set_header   X-Forwarded-Host $server_name;
         }
-        location / {
-            # When using the internal url of the web service:
-            # proxy_pass http://imonetprod_web_1:80; 
-
-            # Reference the upstream server configured above
-            proxy_pass http://imonetprod_web; 
-        }
-       
+        # Here common config
     }
    upstream imonetprod_pwa {
         server imonetprod_pwa_1:80 weight=3;
